[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scene/battle.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/UI Pack RPG/panel_brown.png" type="Texture" id=2]
[ext_resource path="res://assets/UI Pack RPG/panel_beigeLight.png" type="Texture" id=3]
[ext_resource path="res://src/script/angle.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/Kanit-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = SubResource( 3 )

[node name="angle" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -45.3574
margin_top = -37.6787
margin_right = 1390.64
margin_bottom = 801.321
color = Color( 1, 0.639216, 0.294118, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 519.855
margin_top = 246.289
margin_right = 931.855
margin_bottom = 336.289
custom_fonts/font = SubResource( 2 )
text = "จับคู่มุมกับตัวเลข"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Label" parent="Title"]
margin_left = -96.1085
margin_top = 88.4478
margin_right = 557.891
margin_bottom = 148.448
custom_fonts/font = SubResource( 4 )
text = "แตะที่การ์ดใบแรกและใบที่สองเพื่อจับคู่กัน"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="battle" parent="." instance=ExtResource( 1 )]

[node name="answer1_front" type="TextureRect" parent="."]
margin_left = 323.085
margin_top = 407.002
margin_right = 423.085
margin_bottom = 507.002
rect_scale = Vector2( 3.5, 1.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="answer1_front"]
margin_left = 5.22065
margin_top = 9.84833
margin_right = 105.221
margin_bottom = 109.848
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceAnswer1" type="ReferenceRect" parent="answer1_front"]
margin_right = 98.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer2_front" type="TextureRect" parent="."]
margin_left = 680.0
margin_top = 407.002
margin_right = 780.0
margin_bottom = 507.002
rect_scale = Vector2( 3.5, 1.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="answer2_front"]
margin_left = 5.22065
margin_top = 9.84833
margin_right = 105.221
margin_bottom = 109.848
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceAnswer2" type="ReferenceRect" parent="answer2_front"]
margin_right = 98.0
margin_bottom = 105.0

[node name="answer3_front" type="TextureRect" parent="."]
margin_left = 323.085
margin_top = 560.0
margin_right = 423.085
margin_bottom = 660.0
rect_scale = Vector2( 3.5, 1.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="answer3_front"]
margin_left = 5.22065
margin_top = 9.84833
margin_right = 105.221
margin_bottom = 109.848
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceAnswer3" type="ReferenceRect" parent="answer3_front"]
margin_right = 98.0
margin_bottom = 101.0

[node name="answer4_front" type="TextureRect" parent="."]
margin_left = 680.0
margin_top = 560.0
margin_right = 780.0
margin_bottom = 660.0
rect_scale = Vector2( 3.5, 1.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="answer4_front"]
margin_left = 5.22065
margin_top = 9.84833
margin_right = 105.221
margin_bottom = 109.848
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceAnswer4" type="ReferenceRect" parent="answer4_front"]
margin_right = 98.0
margin_bottom = 101.0

[node name="answer1" type="TextureRect" parent="."]
visible = false
margin_left = 476.0
margin_top = 460.0
margin_right = 547.0
margin_bottom = 524.0
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer2" type="TextureRect" parent="."]
visible = false
margin_left = 828.0
margin_top = 460.0
margin_right = 899.0
margin_bottom = 524.0
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer3" type="TextureRect" parent="."]
visible = false
margin_left = 474.0
margin_top = 612.0
margin_right = 545.0
margin_bottom = 676.0
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer4" type="TextureRect" parent="."]
visible = false
margin_left = 824.0
margin_top = 610.0
margin_right = 895.0
margin_bottom = 674.0
rect_scale = Vector2( 0.9, 0.8 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="mouse_entered" from="answer1_front/ReferenceAnswer1" to="." method="_on_ReferenceAnswer1_mouse_entered"]
[connection signal="mouse_exited" from="answer1_front/ReferenceAnswer1" to="." method="_on_ReferenceAnswer1_mouse_exited"]
[connection signal="mouse_entered" from="answer2_front/ReferenceAnswer2" to="." method="_on_ReferenceAnswer2_mouse_entered"]
[connection signal="mouse_exited" from="answer2_front/ReferenceAnswer2" to="." method="_on_ReferenceAnswer2_mouse_exited"]
[connection signal="mouse_entered" from="answer3_front/ReferenceAnswer3" to="." method="_on_ReferenceAnswer3_mouse_entered"]
[connection signal="mouse_exited" from="answer3_front/ReferenceAnswer3" to="." method="_on_ReferenceAnswer3_mouse_exited"]
[connection signal="mouse_entered" from="answer4_front/ReferenceAnswer4" to="." method="_on_ReferenceAnswer4_mouse_entered"]
[connection signal="mouse_exited" from="answer4_front/ReferenceAnswer4" to="." method="_on_ReferenceAnswer4_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
